--- a/archivos/curso-javascript/css/estilo.css
+++ b/archivos/curso-javascript/css/estilo.css
@@ -7,19 +7,12 @@ h1{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color:rgb(14, 30, 83)
 }
-h2{
-    font-size: 24px;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color:rgb(14, 30, 83)
-}
 ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 15%;
+    width: 25%;
     background-color: rgb(190, 239, 255);
-    /* Se debe desactivar el "position: fixed", esto causa que no aparesca una regla de desplazamiento hacia abajo*/
-    /* position: fixed; */
     overflow: auto;
     border: 4px solid rgb(9, 44, 141);
 }
@@ -37,6 +30,12 @@ li a{
     text-decoration: none;
 }
 
+li a.activo{
+    background-color: rgb(14, 30, 83);
+    color: white;
+}
+
+/* not() = excepcion */
 li a:hover:not(.activo){
     background-color: rgb(39, 71, 179);
     color: white;
