--- a/archivos/laboratorio05/css/menuindex.css
+++ b/archivos/laboratorio05/css/menuindex.css
@@ -7,15 +7,21 @@ h1{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color:rgb(14, 30, 83)
 }
+h2{
+    font-size: 24px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color:rgb(14, 30, 83)
+}
 ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
     width: 15%;
     background-color: rgb(190, 239, 255);
-    position: fixed;
+    /* Se debe desactivar el "position: fixed", esto causa que no aparesca una regla de desplazamiento hacia abajo*/
+    /* position: fixed; */
     overflow: auto;
-    border: 10px solid rgb(9, 44, 141);
+    border: 4px solid rgb(9, 44, 141);
 }
 
 li{
@@ -31,12 +37,6 @@ li a{
     text-decoration: none;
 }
 
-li a.activo{
-    background-color: rgb(14, 30, 83);
-    color: white;
-}
-
-/* not() = excepcion */
 li a:hover:not(.activo){
     background-color: rgb(39, 71, 179);
     color: white;
